--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -7,14 +7,14 @@ RUN apk add --no-cache \
     libpng-dev \
     libzip-dev \
     libpq-dev \
-    zlib-dev
+    zlib-dev \
+    oniguruma-dev
 
 # Install PHP extensions
-# RUN apt-get install -y libpq-dev
-# RUN apt-get install postgresql-dev
 RUN docker-php-ext-install gd
 RUN docker-php-ext-install zip
 RUN docker-php-ext-install pdo pdo_pgsql
+RUN docker-php-ext-install mbstring
 
 # Get latest Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
